--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -14,6 +14,7 @@ jobs:
           to: ${{ secrets.TELEGRAM_NOTIFY_CHAT }}
           token: ${{ secrets.TELEGRAM_NOTIFY_TOKEN }}
           message: |
+            #notifications #github-actions
             ${{ github.actor }} created commit:
             Commit message: ${{ github.event.commits[0].message }}
             Repository: ${{ github.repository }}
@@ -51,6 +52,7 @@ jobs:
           to: ${{ secrets.TELEGRAM_NOTIFY_CHAT }}
           token: ${{ secrets.TELEGRAM_NOTIFY_TOKEN }}
           message: |
+            #notifications #github-actions
             New image tag `${{ secrets.DOKER_IMAGE_TAG }}`
             See changes: https://hub.docker.com/r/limpidkzonix/telegram-jitsi-meet/tags
       - name: Print Image Name
@@ -79,6 +81,7 @@ jobs:
           to: ${{ secrets.TELEGRAM_NOTIFY_CHAT }}
           token: ${{ secrets.TELEGRAM_NOTIFY_TOKEN }}
           message: |
+            #notifications #github-actions
             The bot application has been redeployed with the tag `${{ secrets.DOKER_IMAGE_TAG }}`
 
 
