--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,20 +8,24 @@
 	"features": {
 		"ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {}
 	},
-
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// This can be used to network with other containers or the host.
 	// "forwardPorts": [5000, 5432],
-
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "pip install --user -r requirements.txt",
-
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"ms-python.isort",
+				"ms-python.vscode-pylance",
+				"ms-python.python"
+			]
+		}
+	},
 	// Configure tool-specific properties.
 	// "customizations": {},
-
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "nonroot"
 }
