--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,5 +2,6 @@ version: "3.3"
 services:
   jitsimeetbot:
     image: limpidkzonix/telegram-jitsi-meet:latest
+    restart: always
     environment:
      - TG_BOT_TOKEN
