--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,6 +5,11 @@ ENV PYTHONUNBUFFERED 1
 RUN pip3 --disable-pip-version-check --no-cache-dir install -U black flake8 pylint prospector
 RUN rm -rf /tmp/pip-tmp
 
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends curl
+
+RUN curl -sSL https://install.python-poetry.org | python3 -
+
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
 #     && apt-get -y install --no-install-recommends <your-package-list-here>
