change to nickname

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -92,4 +92,4 @@ jobs:
 
             🤖 The application has been re-deployed with the tag `${{ secrets.DOKER_IMAGE_TAG }}`
 
-            Check this out @https://t.me/jitsi_meet_link_generator_bot
+            Check this out @jitsi_meet_link_generator_bot
